tests/invalid/undef_type_mod_qual.m
:- module undef_type_mod_qual.
 
:- interface.
 
:- pred blah(undef_type_mod_qual__undefined_type) is det.
 
:- implementation.
 
blah(_).                                                   
