tests/invalid/undef_type_mod_qual.err_exp
undef_type_mod_qual.m:009: In declaration of predicate
undef_type_mod_qual.m:009:   `undef_type_mod_qual.blah'/1:
undef_type_mod_qual.m:009:   error: undefined type
undef_type_mod_qual.m:009:   `undef_type_mod_qual.undefined_type'/0.
